Filtre keywords + liseré

--- a/public/taskpane.html
+++ b/public/taskpane.html
@@ -33,6 +33,14 @@
           <span>Recherche</span>
           <input id="search-input" type="search" placeholder="Tapez un mot-clé…" />
         </label>
+        <label class="filter">
+          <span>Filtre mots-clés</span>
+          <select id="keyword-filter">
+            <option value="all">Tous</option>
+            <option value="with">Avec mots-clés</option>
+            <option value="without">Sans mots-clés</option>
+          </select>
+        </label>
         <button id="refresh-btn" class="ghost">Rafraîchir</button>
       </section>
 
