--- a/public/taskpane.html
+++ b/public/taskpane.html
@@ -31,7 +31,12 @@
       <section class="controls">
         <label class="search">
           <span>Recherche</span>
-          <input id="search-input" type="search" placeholder="Tapez un mot-clé…" />
+          <div class="search-field">
+            <input id="search-input" type="search" placeholder="Tapez un mot-clé…" />
+            <button id="search-clear" class="search-clear hidden" type="button" aria-label="Effacer la recherche">
+              ×
+            </button>
+          </div>
         </label>
         <label class="filter">
           <span>Filtre mots-clés</span>
@@ -42,11 +47,6 @@
           </select>
         </label>
         <button id="refresh-btn" class="ghost">Rafraîchir</button>
-      </section>
-
-      <section id="drop-zone" class="drop-zone" aria-live="polite">
-        <strong>Déposer ici</strong>
-        <span>ou cliquez sur un pictogramme pour l'insérer</span>
       </section>
 
       <section id="status" class="status" aria-live="polite"></section>
