--- a/public/taskpane.html
+++ b/public/taskpane.html
@@ -19,12 +19,9 @@
         <div class="brand">
           <span class="brand-dot"></span>
           <div>
-            <h1>Atelier Pictos</h1>
-            <p>Glissez, cliquez, illustrez vos slides.</p>
+            <h1>Kearney Logos</h1>
+            <p>Insérez les logos officiels dans vos slides.</p>
           </div>
-        </div>
-        <div class="stats">
-          <span id="logo-count">0 logos</span>
         </div>
       </header>
 
@@ -38,14 +35,14 @@
             </button>
           </div>
         </label>
-        <label class="filter">
-          <span>Filtre mots-clés</span>
-          <select id="keyword-filter">
-            <option value="all">Tous</option>
-            <option value="with">Avec mots-clés</option>
-            <option value="without">Sans mots-clés</option>
-          </select>
+        <label class="density">
+          <span>Logos par ligne</span>
+          <div class="density-field">
+            <input id="density-range" type="range" min="1" max="4" step="1" value="3" />
+            <span id="density-value" class="density-value">3</span>
+          </div>
         </label>
+        <button id="keyword-toggle" class="toggle" type="button" aria-pressed="false">Keywords</button>
         <button id="refresh-btn" class="ghost">Rafraîchir</button>
       </section>
 
@@ -53,6 +50,7 @@
 
       <section class="grid" id="logo-grid" aria-live="polite"></section>
     </div>
+    <div id="logo-count" class="count-bubble">0 logos</div>
 
     <script src="taskpane.js"></script>
   </body>
