--- a/public/taskpane.html
+++ b/public/taskpane.html
@@ -20,7 +20,7 @@
         <div class="brand">
           <span class="brand-dot"></span>
           <div>
-            <h1>Kearney Logos</h1>
+            <h1>Neurow.Pictos</h1>
             <p>Insérez les logos officiels dans vos slides.</p>
           </div>
         </div>
@@ -52,14 +52,19 @@
           </select>
         </label>
         <button id="keyword-toggle" class="toggle" type="button" aria-pressed="false">Keywords</button>
-        <button id="refresh-btn" class="ghost">Recharger</button>
         <label class="checkbox">
           <input id="replace-toggle" type="checkbox" />
           <span>Remplacer la sélection</span>
         </label>
       </section>
 
-      <section class="zip-area">
+      <section class="zip-area" id="zip-area">
+        <div id="zip-summary" class="zip-summary hidden">
+          <button id="zip-toggle" class="zip-toggle" type="button" aria-expanded="false">
+            <span id="zip-status-text">ZIP chargé</span>
+            <span class="zip-chevron" aria-hidden="true">⌄</span>
+          </button>
+        </div>
         <div id="zip-drop" class="zip-drop" role="button" tabindex="0" aria-label="Importer un ZIP de pictogrammes">
           <input id="zip-input" type="file" accept=".zip,application/zip" />
           <div class="zip-copy">
@@ -75,7 +80,12 @@
 
       <section class="grid" id="logo-grid" aria-live="polite"></section>
     </div>
-    <div id="logo-count" class="count-bubble">0 logos</div>
+    <div class="count-bar">
+      <div id="logo-count" class="count-bubble">0 logos</div>
+      <button id="refresh-btn" class="refresh-round" type="button" aria-label="Recharger" title="Recharger">
+        <span aria-hidden="true">↺</span>
+      </button>
+    </div>
 
     <script src="taskpane.js"></script>
   </body>
